[package]
name = "raft-modules"
version = "0.1.1"
authors = ["Shamil Gadelshin <shamilgadelshin@gmail.com>"]
edition = "2018"

[dependencies]
raft = { package = "raft", path = "../"}
log = "0.4"
crossbeam-channel = "0.3"
rand = "0.6.5"
parking_lot = "0.10.2"

futures = "0.1"
bytes = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http", tag = "tower-request-modifier-0.1.0"}
tower-hyper = "0.1"
hyper = "0.12"
tower-grpc = { version = "0.1.0", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

[build-dependencies]
tower-grpc-build =  { version = "0.1.0", features = ["tower-hyper"] }
prost-build = "0.5"