[package]
name = "ruft-modules"
version = "0.1.0"
authors = ["Shamil Gadelshin <shamilgadelshin@gmail.com>"]
edition = "2018"

[dependencies]
ruft = { package = "ruft", path = "../"}
log = "0.4"
crossbeam-channel = "0.3"

futures = "0.1"
bytes = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
hyper = "0.12"
tower-grpc = { version = "0.1.0", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

[build-dependencies]
tower-grpc-build =  { version = "0.1.0", features = ["tower-hyper"] }
prost-build = "0.5"